--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+
+  "engines": {
+    "node": "14.x"
+  },
+
   "type": "module",
   "dependencies": {
     "apollo-server-express": "^3.5.0",
